# rosbag2_snapshot

rosbag2_snapshot/: CMakeLists.txt  package.xml
rosbag2_snapshot/include/rosbag2_snapshot/: ffmpeg_encoder.hpp  snapshotter.hpp
rosbag2_snapshot/include/rosbag2_snapshot/ffmpeg_encoding/: ffmpeg_encoder.hpp  safe_param.hpp  tdiff.hpp  types.hpp  utils.hpp
rosbag2_snapshot/src/: ffmpeg_encoder.cpp  main.cpp  snapshotter.cpp  tdiff.cpp  utils.cpp
rosbag2_snapshot/src/ffmpeg_encoding/: ffmpeg_encoder.cpp  tdiff.cpp  utils.cpp
rosbag2_snapshot_msgs/: CMakeLists.txt
rosbag2_snapshot_msgs/action/: TriggerSnapshot.action
rosbag2_snapshot_msgs/msg/: TopicDetails.msg
rosbag2_snapshot_msgs/srv/: TriggerSnapshot.srv
